--- a/Estimates of Undergraduate Expenses at University of Calgary.rmd
+++ b/Estimates of Undergraduate Expenses at University of Calgary.rmd
@@ -1,3 +1,7 @@
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 ```{r}
 info = read.csv(file ="~/Downloads/finalproject.csv")
 info
